GA4 트래픽 획득 분석 문서 및 index 수정

--- a/index.html
+++ b/index.html
@@ -220,8 +220,10 @@
           <button class="btn-buy-final js-buy">
             제품 직접구매
           </button>
-          <div class="purchase-note-small">
-            * 실제 판매 시에는 위 버튼에 스마트스토어/자사몰 상품 URL을 연결해 주세요.
+          <a href="https://smartstore.naver.com/seonmarket/products/5173072326" class="btn-buy-final js-buy" target="_blank" style="text-decoration: none; display: block; text-align: center;">
+  제품 직접구매
+</a>
+      
           </div>
         </div>
         <div class="purchase-image">
@@ -237,7 +239,9 @@
   </div>
 
   <!-- Fixed CTA -->
-  <a href="#purchase" class="fixed-buy-btn">구매하기</a>
+ <a href="https://smartstore.naver.com/seonmarket/products/5173072326" class="btn-buy-final js-buy" target="_blank" style="text-decoration: none; display: block; text-align: center;">
+  제품 직접구매
+</a>
 
   <script src="js/main.js" defer></script>
 </body>
